# V2X-UDP-Testing

./: CMakeLists.txt  README.md
receive/: CMakeLists.txt
receive/include/: receive.hpp
receive/src/: receive.cpp  receive_main.cpp
send/: CMakeLists.txt
send/include/: send.hpp
send/src/: send.cpp  send_main.cpp
test_erhalten/: CMakeLists.txt
test_erhalten/src/: test.cpp
